# tools

./: .bazelrc  .gitignore  BUILD  COPYING  MODULE.bazel  README.md  TODO.md
cli/: Args.java  BUILD  CLI.java  MultiCommand.java  README.md  SimpleCLI.java  UsageException.java
example/: BUILD  expected-output.txt  ziptool_overlay_test.sh
private/: artifact.bzl
rules/: zip_overlay.bzl  ziptool.bzl
tools/format/: BUILD
xmltool/: BUILD  Main.java  README.md  XMLFormat.java
zip_overlay/: BUILD  ManyZipEntryStream.java  ManyZipEntryStreamTests.java  README.md  ReadableZipEntry.java  ZipOverlay.java
ziptool/: BUILD  ManyZipEntryStream.java  ManyZipEntryStreamTests.java  README.md  ReadableZipEntry.java  ZipOverlay.java  ZipToolMain.java
