module(
    name = "boinsoft_tools",
    version = "0.1.0",
)

###
###
###
bazel_dep(name = "rules_jvm_external", version = "6.6")

JUNIT_JUPITER_VERSION = "5.11.3"

JUNIT_PLATFORM_VERSION = "1.11.3"

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    name = "boinsoft_tools_maven",
    artifacts = [
        "io.vavr:vavr:0.10.4",
        "org.junit.jupiter:junit-jupiter-api:%s" % JUNIT_JUPITER_VERSION,
        "org.junit.platform:junit-platform-launcher:%s" % JUNIT_PLATFORM_VERSION,
        "org.junit.platform:junit-platform-console:%s" % JUNIT_PLATFORM_VERSION,
        "org.junit.platform:junit-platform-reporting:%s" % JUNIT_PLATFORM_VERSION,
        "org.junit.jupiter:junit-jupiter-api:%s" % JUNIT_JUPITER_VERSION,
        "org.junit.jupiter:junit-jupiter-params:%s" % JUNIT_JUPITER_VERSION,
        "org.junit.jupiter:junit-jupiter-engine:%s" % JUNIT_JUPITER_VERSION,
    ],
    strict_visibility = True,
)
use_repo(maven, "boinsoft_tools_maven")
