module(
    name = "boinsoft_tools",
    version = "0.1.0",
)

###
###
###
bazel_dep(name = "aspect_rules_lint", version = "1.0.9")

http_jar = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_jar")

http_jar(
    name = "google-java-format",
    sha256 = "33068bbbdce1099982ec1171f5e202898eb35f2919cf486141e439fc6e3a4203",
    url = "https://github.com/google/google-java-format/releases/download/v1.17.0/google-java-format-1.17.0-all-deps.jar",
)

###
###
###
bazel_dep(
    name = "buildifier_prebuilt",
    version = "8.0.1",
    dev_dependency = True,
)

###
###
###
bazel_dep(name = "rules_jvm_external", version = "6.6")

JUNIT_JUPITER_VERSION = "5.11.3"

JUNIT_PLATFORM_VERSION = "1.11.3"

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    name = "boinsoft_tools_maven",
    artifacts = [
        "io.vavr:vavr:0.10.4",
        "commons-cli:commons-cli:1.9.0",
        "org.junit.jupiter:junit-jupiter-api:%s" % JUNIT_JUPITER_VERSION,
        "org.junit.platform:junit-platform-launcher:%s" % JUNIT_PLATFORM_VERSION,
        "org.junit.platform:junit-platform-console:%s" % JUNIT_PLATFORM_VERSION,
        "org.junit.platform:junit-platform-reporting:%s" % JUNIT_PLATFORM_VERSION,
        "org.junit.jupiter:junit-jupiter-api:%s" % JUNIT_JUPITER_VERSION,
        "org.junit.jupiter:junit-jupiter-params:%s" % JUNIT_JUPITER_VERSION,
        "org.junit.jupiter:junit-jupiter-engine:%s" % JUNIT_JUPITER_VERSION,
        "org.dom4j:dom4j:2.1.4",
    ],
    strict_visibility = True,
)
use_repo(maven, "boinsoft_tools_maven")
